--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,4 @@
 deployment:
     tasks:
         - export DEPLOYPATH=/home/ozcte0mg/public_html/
-        - /bin cp * $DEPLOYPATH
+        - /bin/cp -R build * $DEPLOYPATH
