--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,6 @@
 deployment:
     tasks:
         - export DEPLOYPATH=/home/ozcte0mg/public_html/
-        - /bin/cp -R * $DEPLOYPATH
+        - npm install
+        - npm run build
+        - /bin/cp -R build/* $DEPLOYPATH
