--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://erinbazaz.com.me",
+  "homepage": "http://erinbazaz.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
