--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
