--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        token: ${{ secrets.GITHUB_TOKEN }}
         cache: 'npm'
     - run: npm install
+      working-directory: my-app
     - run: npm run build --if-present
+      working-directory: my-app
+
     #- run: npm test
