--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,11 @@ jobs:
       working-directory: my-app
     - run: npm run build --if-present
       working-directory: my-app
+    - name: deploy
+      with:
+        server: ${{secrets.FTP_SERVER}}
+        username: ${{secrets.FTP_USERNAME}}@{{secrets.FTP_SERVER}}
+        password: ${{secrets.FTP_PASSWORD}}
+        local-dir: ./_site/
 
     #- run: npm test
