--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
     - run: npm run build --if-present
       working-directory: my-app
     - name: deploy
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
         server: ${{secrets.FTP_SERVER}}
         username: ${{secrets.FTP_USERNAME}}@{{secrets.FTP_SERVER}}
