--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,6 @@ jobs:
         server: ${{secrets.FTP_SERVER}}
         username: ${{secrets.FTP_USERNAME}}@{{secrets.FTP_SERVER}}
         password: ${{secrets.FTP_PASSWORD}}
-        local-dir: ./_site/
+        local-dir: ./build/
 
     #- run: npm test
