--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
         server: ${{secrets.FTP_SERVER}}
-        username: ${{secrets.FTP_USERNAME}}@{{secrets.FTP_SERVER}}
+        username: ${{secrets.FTP_USERNAME}}
         password: ${{secrets.FTP_PASSWORD}}
         local-dir: ./my-app/build/
 
